--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "cliui": "^7.0.4",
     "ansi-regex": "^5.0.1",
-    "color-convert": "^2.0.1",
     "ansi-styles": "^4.3.0",
+    "cliui": "^7.0.4",
+    "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
-    "escalade": "^3.1.1",
     "emoji-regex": "^8.0.0",
+    "escalade": "^3.1.1",
     "get-caller-file": "^2.0.5",
-    "require-directory": "^2.1.1",
     "is-fullwidth-code-point": "^3.0.0",
-    "strip-ansi": "^6.0.1",
-    "validator": "^13.7.0",
-    "yargs": "^17.5.1",
-    "wrap-ansi": "^7.0.0",
+    "require-directory": "^2.1.1",
     "string-width": "^4.2.3",
-    "yargs-parser": "^21.1.1",
-    "y18n": "^5.0.8"
+    "strip-ansi": "^6.0.1",
+    "validation": "^0.0.1",
+    "validator": "^13.7.0",
+    "wrap-ansi": "^7.0.0",
+    "y18n": "^5.0.8",
+    "yargs": "^17.5.1",
+    "yargs-parser": "^21.1.1"
   },
-  "devDependencies": {},
   "scripts": {
+    "start": "node app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
